2008-10-06  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xosc-procs.tcl: Newer xotcl-core versions (0.9*) are
	pickier regarding meta-info provided to ::xo::PackageMgr instances
	(package_key etc.). Thanks to Robert Koblischke and Nima Mazloumi
	for reporting.

2008-08-05  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/20-xorb-procs.tcl: Protecting impl_alias parsing when
	initialising implementation objects from db. It should now be
	fail-safe when denoting calls to XOTcl objects by means of
	white-space separators. The issue shows only when implementations
	were defined through legacy ACS/SC interfaces (as it happens
	in recent versions of xowiki dotlrn portlet). Thanks for Nima
	Mazloumi for pointing to the issue. 

2008-07-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-datatypes-procs.tcl: Another 1.6 compat fix. Need to
	add a -closure flag around a superclass introspection instruction
	to have the anything resolution operative again (in particular
	cases).

2008-07-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-context-procs.tcl (InvocationInformationType): Adding
	isSet helper method ...

	* tcl/xorb-stub-procs.tcl: Adjusting timeout default from 10000ms
	to 0 for both blocking/non-blocking scenarios. This avoids the
	unsolicited use of blocking-timeout feature. Note that you need to
	explicitly set a timeout value > 0 when setting asynchronous to
	'true'.

2008-07-08  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/10-xorb-exceptions-procs.tcl: Facilitated the creation for
	application-specific/ custom exception kinds to be
	specified. Includes minor fix for ad_docs on exception class
	objects to do not vanish in the course of processing.

2008-06-16  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* xotcl-request-broker.info: Bumped xotcl-core dependency to
	0.87+.

2008-06-11  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>
